    Added 'Ignore Prepare' connection string option for disabling prepared
         statements application-wide    
    A nicer exception is displayed if you have added a parameter without the parameter marker.
    Improved CommandBuilder.DeriveParameters to use the procedure cache if possible
    Return parameters created with DeriveParameters now have the name RETURN_VALUE
      
Version 1.0.8 RC

    Other changes
    -------------
    Implemented a stored procedure cache
    Changed how stored procedure metadata is retrieved to allow users without select privs
    on mysql.proc to use them
    Fixed shared memory connections
    Increased speed of MySqlParameterCollection.IndexOf(string) orders of magnitude
         (parameter name lookups are now strict on use of parameter marker)
    
    Bugs fixed or addressed
    -----------------------
    Bug #16659 Can't use double quotation marks(") as password access server by Connector/NET [fixed]
    Bug #17375 CommandBuilder ignores Unsigned flag at Parameter creation [fixed]
    Bug #17749 There is no char type in MySqlDbType [fixed]
    Bug #16788 Only byte arrays and strings can be serialized by MySqlBinary [fixed]
    Bug #16645 FOUND_ROWS() Bug [can't repeat - added test case]
    Bug #18570 Unsigned tinyint (NET byte) incorrectly determined param type from param val	[fixed]
    Bug #19261 Supplying Input Parameters [fixed]
    Bug #19481 Where clause with datetime throws exception [any warning causes the exception] [fixed]
    Bug #15077 Error MySqlCommandBuilder.DeriveParameters for sp without parameters. [fixed]
    Bug #16934 Unsigned values > 2^63 (UInt64) cannot be used in prepared statements
    Bug #19515 DiscoverParameters fails on numeric datatype [fixed]
    Bug #17814 Stored procedure fails unless DbType set explicitly [fixed]
    Bug #19294 IDataRecord.GetString method should return null for null values [fixed]