@@ -48,6 +48,7 @@ namespace MySql.Data.MySqlClient
 		private MySqlDbType mySqlDbType;
 		private DbType dbType;
 		private bool inferType;
+        private MySqlParameterCollection collection;
 
 		#region Constructors
 
@@ -153,6 +154,12 @@ namespace MySql.Data.MySqlClient
 
 		#region Properties
 
+        internal MySqlParameterCollection Collection
+        {
+            get { return collection; }
+            set { collection = value; }
+        }
+
 		internal bool TypeHasBeenSet
 		{
 			get { return inferType == false; }
@@ -213,7 +220,12 @@ namespace MySql.Data.MySqlClient
 		public String ParameterName
 		{
 			get { return paramName; }
-			set { paramName = value; }
+			set 
+            {
+                if (collection != null)
+                    collection.ParameterNameChanged(this, paramName, value);
+                paramName = value; 
+            }
 		}
 
 		/// <summary>
